# qhub-cli

./: .env.example  .env.local  .env.production  .gitattributes  .gitignore  .gitignore.staging  ARCHITECTURE_COMPLETE.md  AUTH_IMPLEMENTATION.md  AUTOCOMPLETE.md  BRANCHING_IMPLEMENTATION.md  BRANCHING_STRATEGY.md  CLOUDFLARE_D1_SETUP.md  COMPLETION_SUMMARY.md  CONFIG.md  Cargo.toml  DATABASE.md  DATABASE_ISOLATION_VERIFIED.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  INTEGRATION_GUIDE.md  PHASE1_TEST_REPORT.md  PRODUCTION_DEPLOYMENT.md  QUICK_DEPLOY.md  README.md  README_NEW.md  SECURITY.md  deploy.sh  deploy_production.sh  docker-compose.yml  qhub.sh  setup-env.sh  test_auth_quick.sh  test_db_connection.sh  test_integration.sh  test_session_management.sh  test_startup.sh  wrangler.toml
.github/agents/: cli-master.agent.md
admin-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
admin-dashboard/src/: App.tsx  index.css
admin-dashboard/src/components/: Layout.tsx
admin-dashboard/src/pages/: Analytics.tsx  Dashboard.tsx  Login.tsx  System.tsx  Users.tsx
migrations/: 001_init_schema.sql  001_init_schema_d1.sql  002_unify_schema.sql
src/: main.rs
src/api/: backend.rs  client.rs  deepseek.rs  ibm_quantum.rs  mod.rs
src/auth/: credentials.rs  mod.rs  oauth.rs  service.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: settings.rs
src/db/: mod.rs  models.rs  pool.rs
src/quantum/: job.rs  mod.rs  qqb.rs  transpiler.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
src/tui/components/: header.rs  input_box.rs  message_list.rs  mod.rs  status_bar.rs
workers/: .dev.vars.example  .gitignore  API_EXAMPLES.md  BUILD_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  INDEX.md  QUICK_REFERENCE.md  README.md  package.json  setup.sh  tsconfig.json  wrangler.toml
workers/migrations/: 001_init_schema.sql
workers/src/: index.ts  types.ts  utils.ts
workers/src/middleware/: auth.ts
workers/src/routes/: ai.ts  auth.ts  quantum.ts
