[package]
name = "qhub"
version = "0.1.0"
edition = "2021"
description = "Quantum computing CLI with AI-powered code generation"
authors = ["QHub Team"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Syntax highlighting
syntect = "5.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Directories (for config paths)
dirs = "5.0"

# UUID for session management
uuid = { version = "1.6", features = ["v4", "serde"] }

# Colored output
colored = "2.1"

# Date/time
chrono = "0.4"

# Database - PostgreSQL for local, SQLite for Cloudflare D1 compatibility
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }

# Environment variables
dotenv = "0.15"

# Password hashing
argon2 = "0.5"

# JWT tokens
jsonwebtoken = "9.2"

# Base64 encoding
base64 = "0.21"

# URL opening for OAuth
webbrowser = "0.8"
sha2 = "0.10.9"

# ============================================================================
# BUILD PROFILES - Environment-Specific Builds
# ============================================================================

[profile.dev]
# Fast compilation for local development
# Defaults to http://localhost:8787

[profile.release]
# Optimized release build
# Defaults to staging URL for testing

[profile.staging]
inherits = "release"
# Use for staging deployments
# Defaults to https://qhub-api-staging.a-contactnaol.workers.dev

[profile.production]
inherits = "release"
# Use for production deployments
# Defaults to https://qhub-api-production.a-contactnaol.workers.dev

[features]
# Feature flag for production builds
production = []
staging = []

# Usage:
#   cargo build                          # Debug build (localhost)
#   cargo build --release                # Release build (staging)
#   cargo build --release --features production  # Production build
#   cargo build --profile staging        # Staging profile
#   cargo build --profile production     # Production profile

